# rosie-pattern-language

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTORS  Dockerfile.ubuntu  GREP-MANIFEST  LICENSE  LICENSE.md  MANIFEST  Makefile  Makefile.cmake  README  README.md  THANKS  VERSION  c2test.lua  makefile  rosie.lua  run
cmake/Modules/: FindReadline.cmake
config/: colors
doc/: README.md  TODO  TODO.md  arch.md  boundary-dwim.txt  cli.md  deployment.md  environment.txt  geek.md  i-know-regex.md  install.md  invariants.md  posix.md  prelude.md  quotes.txt  raisondetre.md  repl.md  rhel.md  rpl-mode.el  rpl.md  standardlib.md  types.md  ubuntu.md  windows10ae.md
doc/data/: sample_comma.csv  sample_pipe.csv
doc/data/csv/: output_comma.json  output_pipe.json  output_semicolon.json
doc/emacs/: lua-interactive.el  rosie-development.el  rpl-mode.el
doc/man/: man.css  process.sh  rosie-future.1  rosie.1  rosie.1.html  rosie.1.ronn  rosie.html  tohtml.sh
doc/notes/: compilation-overview.md  eval-scope-note.txt  invariants.md  let-letrec.md
docker/: Dockerfile.arch  Dockerfile.fedora  Dockerfile.ubuntu  arch-no-git.docker  arch.docker  fedora.docker  ubuntu.docker
extra/docker/: .gitignore  README.md  arch  centos  fedora  python  python3  run  ubuntu  ubuntu-go
extra/emacs/: lua-interactive.el  rosie-development.el  rpl-mode.el
extra/examples/: README.md  generic_sloc.py  rosie.py  sloc_C.sh  sloc_lua.sh
extra/vim/ftdetect/: rosie.vim
extra/vim/syntax/: rosie.vim
ffi/: README
ffi/librosie/: Makefile  librosie.c  librosie.h
ffi/librosie/sample/C/: Makefile  rtest  rtest.c  rtest.sh
ffi/samples/: README
ffi/samples/C/: Makefile  README.md  rtest  rtest.c  rtest.sh
ffi/samples/go/: .gitignore  rtest  setup.sh
ffi/samples/go/src/rtest/: .gitignore  rtest.go
ffi/samples/nodejs/: rtest.js  setup.sh
ffi/samples/python/: foo.py  jsontest.py  rosie.py  rtest.py  setup.sh
ffi/samples/ruby/: rosie.rb  rtest.rb  setup.sh
rpl/: all.rpl  basic.rpl  common.rpl  core.rpl  csv.rpl  csv1.rpl  date.rpl  datetime.rpl  grep.rpl  id.rpl  json.rpl  language-comments.rpl  net.rpl  network.rpl  num.rpl  os.rpl  rfc3986.rpl  rosie.rpl  rpl-1.0.rpl  rpl-1.1.rpl  rpl-core.rpl  spark.rpl  str.rpl  time.rpl  ts.rpl  word.rpl
rpl/Unicode/: Ascii.rpl  Block.rpl  Category.rpl  GraphemeBreak.rpl  LineBreak.rpl  NumericType.rpl  Property.rpl  Script.rpl  SentenceBreak.rpl  WordBreak.rpl
rpl/builtin/: prelude.rpl
rpl/rosie/: Category.rpl  LineBreak.rpl  Property.rpl  SentenceBreak.rpl  WordBreak.rpl  prelude.rpl  rcfile.rpl  rpl_1_0.rpl  rpl_1_1.rpl  rpl_1_2.rpl  symbols.rpl  u.rpl
rpl/rosie/builtin/: boundary.rpl  functions.rpl  macros.rpl  symbols.rpl
rpl1.1/: common.rpl  test.rpl  test2.rpl  top.rpl
src/: Makefile  README  api.lua  bootstrap.lua  build_info.sh  cli.lua  color-output.lua  common.lua  compile.lua  dev.lua  engine.lua  eval.lua  grep.lua  instructions.lua  lapi.lua  librosie.c  list-test.lua  list.lua  load-modules.lua  lpeg-debug.lua  lua_api.lua  manifest.lua  module.lua  parse.lua  recordtype-test.lua  recordtype.lua  repl.lua  rjsonpp  rosie-compile.lua  rosie-core.rpl  rosie-package-template.lua  rosie.lua  rpl-core.rpl  rpl-core2.rpl  rpl-in-rpl-1.rpl  rpl-parse.lua  rprint  run  run-rosie  run.lua  (+8 more)
src/c/: Makefile  librosie.c  librosie.h  rosie.c
src/c/librosie/: Makefile  ffi_test.js  ffi_test.py  ffi_test.rb  librosie.c  librosie.h  lua_test.lua  new_ffi_test.js  new_ffi_test.py  new_ffi_test.rb  rosie.rb  rtest.c
src/c/librosie/go/: setpath
src/c/librosie/go/src/ffi/: ffi.go
src/c/repl/: Makefile  rosie.c
src/cli/: .gitignore  Makefile  cli.lua  rosie  rosie.c
src/core/: api.lua  ast.lua  boot.lua  bootstrap.lua  builtins.lua  c0.lua  c1.lua  c2.lua  cli-common.lua  cli-match.lua  cli-parser.lua  cli-test-command.lua  cli.lua  cli_color.lua  color-output.lua  color.lua  command-common.lua  command-match.lua  command-parser.lua  command-test.lua  common.lua  compile.lua  e2.lua  engine.lua  engine_module.lua  environment.lua  eval.lua  expand.lua  grep.lua  init.lua  lapi.lua  list.lua  load-modules.lua  loadpkg.lua  manifest.lua  match_file.lua  module.lua  p2.lua  parse.lua  parse_core.lua  (+13 more)
src/librosie/: .gitignore  Makefile  ctest.c  ctest.h  dtest.c  example.py  librosie.c  librosie.h  librosie.hpp  logging.c  lua_repl.c  lua_repl.h  rbuf.h  readlink.c  registry.c  rosie  rosie.c  rosie.py  rosiestring.c  rpeg.h  test.py
src/librosie/C/: .gitignore  Makefile  data-2017-12-12.1.csv  dynamic.c  dynamic.h  mt.c  static.c
src/librosie/go/: .gitignore  Makefile  README.md  rosie  setup.sh  test.rpl
src/librosie/go/src/rosie/: liblua.5.3.dylib  librosiewrapper.cpp  rosie.go
src/librosie/go/src/rosie/include/: lauxlib.h  librosie.h  librosiewrapper.h  rbuf.h  rpeg.h
src/librosie/go/src/rtest/: rtest.go
src/librosie/python/: .gitignore  Makefile  pypi_config.py  rosie.py  test.py
src/librosie/python/pyrosie/: __init__.py  adapt23.py  internal.py  rosie.py
src/unicode/: README.md  compile-utf8.lua  compliance.md  enumerated.lua  old-test-utf8-range.lua  old-try-all.lua  propertylist.txt  scripts.lua  test-utf8-range.lua  top.lua  ucd.lua  ucd.rpl  unicode.lua  utf8-range.lua  util.lua
submodules/: lfs-Makefile  lfs-config
test/: all.lua  api-test.lua  cli-test.lua  cmdlinesniff.lua  dup-id1.rpl  dup-id2.rpl  dup-id3.rpl  dup-id4.rpl  eval-test.lua  json-test-input.json  lib-test.lua  lightweight-test-fail.rpl  lightweight-test-pass.rpl  logfile  manifest  manifest-test.rpl  manifest.err  manifest.synerr  mod1.rpl  mod2.rpl  mod3.rpl  mod4.rpl  mod5.rpl  mod6.rpl  mod7.rpl  mod8.rpl  mod_circular.rpl  mod_circular_1.rpl  mod_circular_2.rpl  nested-test.rpl  nested-test2.rpl  nested-test3.rpl  net-fail.rpl  ok.rpl  quick.txt  range-input.txt  rcfile1  rcfile2  rcfile3  rcfile4  (+25 more)
